--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/src/config.js
-
 # dependencies
 /node_modules
 /.pnp
@@ -21,3 +19,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/config.js
